# minigram

./: .gitignore  BUILD_SETTINGS  CMakeLists.txt  SET_BUILD_CONTAINER  docker_prepare.sh  unittest.cpp
docker/: Dockerfile  prepare.sh
